--- a/Classification.ipynb
+++ b/Classification.ipynb
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -559,7 +559,7 @@
     "#define parameters\n",
     "param_grid = {\n",
     "    'n_estimators': [100, 500, 1000],\n",
-    "    'max_depth': [10, 20, 30, 40, 50],\n",
+    "    'max_depth': [3, 6, 10, 20, 30, 40, 50],\n",
     "    'min_impurity_decrease': [0.001, 0.01, 0.1]\n",
     "}\n",
     "\n",
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -588,12 +588,12 @@
       "     0  91   0   0\n",
       "     1   0 104   0\n",
       "     2   0   0 170\n",
-      "Confusion Matrix (Accuracy 0.8408)\n",
+      "Confusion Matrix (Accuracy 0.8471)\n",
       "\n",
       "       Prediction\n",
       "Actual  0  1  2\n",
       "     0 26  0 10\n",
-      "     1  0 32  6\n",
+      "     1  0 33  5\n",
       "     2  4  5 74\n"
      ]
     }
